--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,18 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is Geun Young's blog site. I like drawing, code art and robots. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: GeunYoung
-github_username:  GeunYoung
-facebook_username: GeunYoung
-
+twitter_username: GeunYoungPark
+github_username:  GeunYoungPark
+facebook_username: GeunYoungPark
+email: ggeun74@gmail.com
+author_website: https://gopigo.com
+repo: https://github.com/GeunYoungPark/site-test.git
 # Build settings
 markdown: kramdown
 theme: academic
 plugins:
   - jekyll-feed
+
 
 
 
