--- a/_data/academic_i18n.yml
+++ b/_data/academic_i18n.yml
@@ -1,61 +1,61 @@
 months:
-  fr: ["janvier", "février", "mars", "avril", "mai", "juin",
+  kr: ["janvier", "février", "mars", "avril", "mai", "juin",
        "juillet", "août", "septembre", "octobre", "novembre", "décembre"]
 dateformat:
-  fr: "%e %B %Y"
+  kr: "%e %B %Y"
   en: "%b %-d, %Y"
 lastupdated:
-  fr: "mis à jour le"
+  kr: "mis à jour le"
   en: "last updated on"
 revhistory:
-  fr: "Voir l'historique des révisions de ce billet"
+  kr: "Voir l'historique des révisions de ce billet"
   en: "See the revision history for this post"
 cta:
   like:
-    fr: "Le blog vous intéresse ?"
+    kr: "블로그가 맘에 드시나요 ?"
     en: "Do you enjoy the blog?"
   post:
-    fr: "Le post vous a plu ?"
+    kr: "이 글이 맘에 드셨나요 ?"
     en: "Did you like that post?"
   rss:
-    fr: ["Vous pouvez vous abonner au", "fil RSS", "du blog"]
+    kr: ["Vous pouvez vous abonner au", "fil RSS", "du blog"]
     en: ["You can suscribe to the", "RSS feed", ""]
   twitter:
-    fr: ["ou suivre", "sur Twitter"]
+    kr: ["ou suivre", "sur Twitter"]
     en: ["or follow", "on Twitter"]
 links:
-  fr: "Liens :"
+  kr: "Liens :"
   en: "Links :"
 by:
-  fr: "par"
+  kr: "by"
   en: "by"
 legal:
-  fr: ["par", "est placé sous licence"]
+  kr: ["par", "est placé sous licence"]
   en: ["by", "is available under the license"]
 feed:
-  fr: "flux RSS"
+  kr: "flux RSS"
   en: "RSS feed"
 menu:
-  fr: "Menu :"
+  kr: "Menu :"
   en: "Menu:"
 archive:
-  fr: "Bienvenue dans les archives de ce blog. Vous trouverez ci-dessous la liste complète des billets publiés, ordonnés du plus récent au plus ancien."
+  kr: "Bienvenue dans les archives de ce blog. Vous trouverez ci-dessous la liste complète des billets publiés, ordonnés du plus récent au plus ancien."
   en: "Welcome to the archives of this blog. Below, you will find all published posts listed in reverse chronological order."
 all_posts:
-  fr: ["Voir", "tous les articles publiés"]
+  kr: ["Voir", "tous les articles publiés"]
   en: ["See", "all published posts"]
 notfound:
-  fr: "Cette page a probablement déménagé vers une nouvelle adresse..."
+  kr: "Cette page a probablement déménagé vers une nouvelle adresse..."
   en: "I guess this page has moved somewhere else..."
 versions:
-  fr: "Version française :"
+  kr: "Version française :"
   en: "English version:"
 no_versions:
-  fr: "La version française de cette page n'existe pas encore :("
+  kr: "La version française de cette page n'existe pas encore :("
   en: "The English version of this page doesn't exist yet :("
 langs_avail:
-  fr: "Langues :"
+  kr: "Langues :"
   en: "Languages:"
 cv:
-  fr: "Curriculum Vitae"
+  kr: "Curriculum Vitae"
   en: "Curriculum"
